--- a/_posts/2018-06-30-dreamer.md
+++ b/_posts/2018-06-30-dreamer.md
@@ -3,11 +3,12 @@ layout: post
 title: "程序员中的梦想家"
 subtitle: "Dreamers among programmers"
 author: "Hux"
-header-img: "img/post-bg-dreamer.jpg"
+header-img: "img/post-bg-apple-event-2015.jpg"
 header-mask: 0.4
 tags:
   - Facebook
   - 生活
+  - 笔记
 ---
 
 > 本文首发于我的知乎专栏 [The Little Programmer](https://zhuanlan.zhihu.com/p/38722466)，转载请保留链接 ;)
