--- a/_posts/2019-4-5-Xlog.md
+++ b/_posts/2019-4-5-Xlog.md
@@ -57,7 +57,7 @@ libraries/mars_android_sdk/jni/shortlink_packer.h	 | 编译 shortlink_packer.cc 
 > 以下接入部分可参考 mars/samples/iOS 和 mars/samples/Mac。 强调：所有直接调用 C/C++接口的 Objc 源文件必须是 .mm 后缀，不能是.m 后缀。
 
 接入项目
-![img](../img/xlog/apple_linker.png)
+![img](/img/xlog/apple_linker.png)
 
 其中红色部分为 mars 提供的部分，黄色部分是使用 mars 需要的系统库，绿色部分为需要开发者自行实现的 callback 部分。注意：链接的时候要把生成的 framework 移到别的位置再链接，不要直接用mars/mars/cmake_build/iOS/Darwin.out 目录。因为如果再次执行编译脚本会进行一次 clean, 会删除此目录下的文件。
 # xlog使用方法
