--- a/_posts/2019-4-19-CI.md
+++ b/_posts/2019-4-19-CI.md
@@ -14,6 +14,8 @@ tags:
 # Just Record
 shortcut ```shift + command + .```   show hidden file and directory
 
+[iOS持续集成构建](https://mp.weixin.qq.com/s/BPNhQgSxvSgVfOfvHdwCoA)
+
 ## set name package.sh
 ```
 pod install --verbose --no-repo-update &&  \
