--- a/_posts/2019-4-15-xlog.md
+++ b/_posts/2019-4-15-xlog.md
@@ -101,4 +101,4 @@ appender_close();
 
 执行python decode_mars_log_file.py “xlog文件” 得到---xlog.log文件，即可以打开
 
-有问题可以联系[Email](mailto:ep_chengsun@aliyum.com)
+有问题可以联系[Email](mailto:ep_chengsun@aliyun.com)
