--- a/_posts/2019-4-19-图片处理.md
+++ b/_posts/2019-4-19-图片处理.md
@@ -188,4 +188,4 @@ class GenerateQrCodeUtils {
 }
 ```
 
-有问题可以联系[Email](mailto:ep_chengsun@aliyum.com)
+有问题可以联系[Email](mailto:ep_chengsun@aliyun.com)
