--- a/_posts/2019-4-24-多环境配置.md
+++ b/_posts/2019-4-24-多环境配置.md
@@ -90,4 +90,4 @@ Filename -- 子plist的文件名。
     
 [demo](https://github.com/Gensun/Setting.bundle)
 
-有问题可以联系[Email](mailto:ep_chengsun@aliyum.com)
+有问题可以联系[Email](mailto:ep_chengsun@aliyun.com)
