--- a/_posts/2020-01-16-javaweb.md
+++ b/_posts/2020-01-16-javaweb.md
@@ -8,11 +8,11 @@ header-mask: 0.5
 tags:
   - CURD
   - bootstrap
-- Druid
-- servlet
+  - Druid
+  - servlet
 ---
 
-[GitHub code](url) https://github.com/Gensun/daycase
+[GitHub code](https://github.com/Gensun/daycase) 
 
 SQL and Data
 
