--- a/_posts/2020-01-16-微信免越狱最简单实现自动抢红包-1.md
+++ b/_posts/2020-01-16-微信免越狱最简单实现自动抢红包-1.md
@@ -3,7 +3,7 @@ layout: post
 title: "微信自动抢红包可以如此简单"
 subtitle: ""
 author: "Genie"
-header-img: "img/home-bg-geek-1.jpg"
+header-img: "img/home-bg-geek.jpg"
 header-mask: 0.4
 tags:
   - 微信自动抢红包
