--- a/_posts/2020-04-21-appledoc.md
+++ b/_posts/2020-04-21-appledoc.md
@@ -3,7 +3,7 @@ layout: post
 title: "appledoc"
 subtitle: ""
 author: "Genie"
-header-img: "img/home-bg-geek.jpg"
+header-img: "img/BookCover.jpg"
 header-mask: 0.4
 tags:
   - appledoc
