--- a/_posts/2020-04-23-Windows.md
+++ b/_posts/2020-04-23-Windows.md
@@ -3,7 +3,7 @@ layout: post
 title: "密码保护功能"
 subtitle: ""
 author: "Genie"
-header-img: "img/ef.jpg"
+header-img: "img/BookCover.jpg"
 header-mask: 0.5
 tags:
   - 密码保护功能
