--- a/_posts/2020-04-24-git-lfs.md
+++ b/_posts/2020-04-24-git-lfs.md
@@ -14,7 +14,11 @@ tags:
 [官网地址：](https://git-lfs.github.com/)
 
 添加大文件的时候使用：
-> `git lfs track "*.ipa"`
-> `git add LookingEdu.ipa -f`
-> ` git commit -m "add" `
-> ` git push `
+
+ `git lfs track "*.ipa"`
+ 
+ `git add LookingEdu.ipa -f`
+ 
+ `git commit -m "xxx"`
+ 
+ `git push`
