--- a/_posts/2020-04-25-OTA.md
+++ b/_posts/2020-04-25-OTA.md
@@ -8,6 +8,23 @@ header-mask: 0.5
 tags:
   - OTA
 ---
+#补充
+> ###### 最好通过FTP 服务器， 用lfs >1G带宽 就开始收费了，并且是累积的。
+
+
+##### 或者本地配置Apache服务器，Mac 自带一般有
+> `/Library/WebServer/Documents` 在这个路径
+> 
+1. `sudo apachectl start` 开启
+2. 固定Wi-Fi ip
+
+![11](/img/OTA/1.png)
+
+![12](/img/OTA/1.png)
+
+![13](/img/OTA/1.png)
+
+![14](/img/OTA/1.png)
 
 # OTA
 ## 建立git仓库
