--- a/_posts/2020-06-16-属性访问控制.md
+++ b/_posts/2020-06-16-属性访问控制.md
@@ -19,10 +19,20 @@ tags:
 > 且private修饰的方法和属性无论是否跟父类在同一个文件文件内，都无法使用。
 
 
-`internal ` : 默认访问级别
+`internal ` : 默认访问级别, 同一个module或者target 中
 
 `public ` : 可以被任何人访问。但其他module中不可以被override和继承，而在module内可以被override和继承。
 
 `open ` : 可以被任何人使用，包括override和继承。
 
 > 当前类（private）、当前swift文件（fileprivate）、 当前模块（internal）、其它模块（open、public）
+
+get 是 internal set 是private，同module可以访问，不可以修改
+`
+	private(set) var age:Int = 1
+`
+get 是public set 是private，外部module可以访问，不可以修改
+
+`
+ public private(set) var age:Int = 1 
+`
