--- a/_posts/2020-06-10-String.md
+++ b/_posts/2020-06-10-String.md
@@ -58,3 +58,6 @@ if let content = str2.index(str2.startIndex, offsetBy: length, limitedBy: str2.e
 str2[contentRange]
 
 ```
+
+
+## string 是当作collection来使用
