--- a/_posts/2019-4-15-xlog.md
+++ b/_posts/2019-4-15-xlog.md
@@ -11,6 +11,121 @@ tags:
   - 笔记
 ---
 
+# update use by swift
+> 2020-6-30
+
+1. 添加 demo中的Appender2SwiftBridge文件到项目中，
+2.  在xxx-briding-Header.h问价中添加
+
+```
+//xlog
+#import "appender-swift-bridge.h"
+```
+
+在原先的 `LogUtil.h` 文件中添加
+
+```
+// swift used
+///发布模式
+#define LOG_INFO_SWIFT(module, filename, format, ...)  LogInternal(kLevelInfo, module, filename, __LINE__, __FUNCTION__, @"Info:", format, ## __VA_ARGS__)
+///开发模式
+#define LOG_DEBUG_SWIFT(module, filename, format, ...) LogInternal(kLevelDebug, module, filename, __LINE__, __FUNCTION__, @"Debug:", format, ## __VA_ARGS__)
+```
+
+用来区别OC
+
+**在OC中我们通过宏定义就可以低成本实现log落地**
+
+*FYI*
+
+```
+#ifdef DEBUG
+///开发模式
+#define NSLog(format, ...)                           LogInternal(kLevelDebug, General, __FILENAME__, __LINE__, __FUNCTION__, @"Debug:", format, ## __VA_ARGS__)
+#else
+///发布模式
+#define NSLog(format, ...)                           LogInternal(kLevelInfo, General, __FILENAME__, __LINE__, __FUNCTION__, @"Info:", format, ## __VA_ARGS__)
+#endif
+
+```
+
+使用的时候还是利用 `NSLog ` 低侵入，但是在swift中我们怎么使用这样的方式？
+
+1. 建立 `Masxlog.swift`
+2. write you code live this ..
+
+```
+import Foundation
+
+let MSLog = Masxlog.default
+
+class Masxlog {
+    static let `default` = Masxlog()
+
+    private var log: JinkeyMarsBridge?
+
+    init() {
+        log = JinkeyMarsBridge()
+    }
+
+    func config(level: XloggerType, releaseLevel: XloggerType, path: String, prefix: UnsafePointer<Int8>) {
+        log?.initXlogger(level, releaseLevel: releaseLevel, path: path, prefix: prefix)
+    }
+
+    func log(_ type: XloggerType, tag: String, filename: String, content: String) {
+        log?.log(type, tag: tag, filename: filename, content: content)
+    }
+
+    func log(_ filename: String, content: String) {
+        #if DEBUG
+            log?.log(.debug, tag: "模块Swift", filename: filename, content: content)
+        #else
+            log?.log(.info, tag: "模块Swift", filename: filename, content: content)
+        #endif
+    }
+
+    func destroy() {
+        log?.deinitXlogger()
+    }
+}
+
+```
+
+重写 `print`
+
+```
+public func print(_ items: String..., filename: String = #file, function: String = #function, line: Int = #line, separator: String = " ", terminator: String = "\n") {
+    let pretty = "\(URL(fileURLWithPath: filename).lastPathComponent) [#\(line)] \(function)\n\t-> "
+    let output = items.map { "\($0)" }.joined(separator: separator)
+    #if DEBUG
+        Swift.print(pretty + output, terminator: terminator)
+    #else
+    #endif
+    MSLog.log(pretty, content: "\(output)")
+}
+```
+
+还有就是通过自定义 `print` 功能
+
+```
+public func log<T>(_ message: T,
+                   file: String = #file,
+                   line: Int = #line,
+                   column: Int = #column,
+                   method: String = #function
+) {
+    #if DEBUG
+        print("[\((file as NSString).lastPathComponent)][\(line)] - \(method): \(message)")
+    #else
+    #endif
+    MSLog.log("\((file as NSString).lastPathComponent)", content: "\(message)")
+}
+```
+
+我们可以这样使用 `log("msg")` 
+
+> 需要注意的是在swift下这样写都无法记录出第三方库的log日志，必须在同模块下。
+
 # 业务背景
 2018下旬在广汽中心和腾讯合作做网约车项目，当时软凌移动端的负责人。我们开发过程中涉及到的第三方组件由于项目背景的缘故，我们只能使用腾讯的，今天我们来记录下项目中使用到的日志功能，如何做到高性能的本地日志存储。
 > 对于移动开发者来说，当用户反馈或者我们发现问题时，我们需要联系用户，用户答应配合后，然后修改代码打开日志重新编包让用户试图重现问题，重现之后才能继续排查。当然这个比较适合做sdk的同学，
