--- a/_posts/2020-06 copy.md
+++ b/_posts/2020-06 copy.md
@@ -101,11 +101,233 @@ for char in greeting {
 }
 ```
 
+
 ```
-let comma = greeting.index(of: ",")!
+let comma = greeting.firstIndex(of: ",")!
 let substring = greeting[..<comma]
 type(of: substring)
 // Most String APIs can be called on Substring
 print(substring.uppercased())
 print("---")
 ```
+
+> 传递给其他API时，这可能导致意外的高内存使用
+>  要将子字符串转换回字符串，请使用String（）初始化程序。这会将子字符串复制到新缓冲区中：
+
+```
+let newString = String(substring)
+type(of: newString)
+
+```
+
+在Range <String.Index>和NSRange之间转换
+
+Foundation在NSRange和Range <String.Index>上提供了新的初始化程序，可以在两者之间进行转换，从而无需手动计算UTF-16偏移量。这使得使用仍可在NSRanges上使用的API（例如NSRegularExpression和NSAttributedString）更加容易。
+
+```
+// Given a String range
+let string = "Hello 👩🏽‍🌾👨🏼‍🚒💃🏾"
+let index = string.firstIndex(of: Character("👩🏽‍🌾"))!
+let range = index...
+
+print(range.lowerBound)
+// Convert the String range to an NSRange
+import Foundation
+
+let nsRange = NSRange(range, in: string)
+nsRange.length // length in UTF-16 code units
+string[range].count // length in Characters
+assert(nsRange.length == string[range].utf16.count)
+
+// Use the NSRange to format an attributed string
+import UIKit
+
+let formatted = NSMutableAttributedString(string: string, attributes: [.font: UIFont.systemFont(ofSize: 14)])
+formatted.addAttribute(.font, value: UIFont.systemFont(ofSize: 48), range: nsRange)
+
+// NSAttributedString APIs return NSRange
+let lastCharacterIndex = string.index(before: string.endIndex)
+let lastCharacterNSRange = NSRange(lastCharacterIndex..., in: string)
+var attributesNSRange = NSRange()
+_ = formatted.attributes(at: lastCharacterNSRange.location, longestEffectiveRange: &attributesNSRange, in: nsRange)
+attributesNSRange
+
+// Convert the NSRange back to Range<String.Index> to use it with String
+let attributesRange = Range(attributesNSRange, in: string)!
+string[attributesRange]
+
+```
+
+extension 中可以访问 private 的属性
+
+```
+struct SortedArray<Element: Comparable> {
+    private var storage: [Element] = []
+    init(unsorted: [Element]) {
+        storage = unsorted.sorted()
+    }
+}
+
+extension SortedArray {
+    mutating func insert(_ element: Element) {
+        // storage is visible here
+        storage.append(element)
+        storage.sort()
+    }
+}
+
+let array = SortedArray(unsorted: [3,1,2])
+```
+
+# key paths
+
+与Cocoa中基于字符串的键路径不同，Swift键路径是强类型的
+
+```
+struct Person {
+    var name: String
+}
+
+struct Book {
+    var title: String
+    var authors: [Person]
+    var primaryAuthor: Person {
+        return authors.first!
+    }
+}
+
+let abelson = Person(name: "Harold Abelson")
+let sussman = Person(name: "Gerald Jay Sussman")
+let book = Book(title: "Structure and Interpretation of Computer Programs", authors: [abelson, sussman])
+
+```
+
+密钥路径是通过从根类型开始并向下钻取属性和下标名称的任意组合而形成的。
+
+您可以通过以反斜杠开头来写关键路径：\ Book.title。每种类型都会自动获取[keyPath：…]下标，以获取或设置指定键路径处的值。
+
+```
+book[keyPath: \Book.title]
+book[keyPath: \Book.primaryAuthor.name]
+book[keyPath: \Book.authors]
+
+```
+关键路径是可以存储和操作的对象。例如，您可以将其他段附加到关键路径上，以进行进一步细化。
+
+```
+let authorKeyPath = \Book.primaryAuthor
+type(of: authorKeyPath)
+// You can omit the type name if the compiler can infer it
+let nameKeyPath = authorKeyPath.appending(path: \.name)
+book[keyPath: nameKeyPath]
+```
+
+关键路径建议的一部分是关键路径可以包含下标段。这将使它们非常方便地深入到集合中
+
+```
+book[keyPath: \Book.authors[0].name]
+```
+
+具有关键路径的类型安全的KVO
+
+Foundation中的键值观察API已进行了改进，以充分利用新的类型安全的键路径。它比旧的API更易于使用。
+
+注意，KVO取决于Objective-C运行时。它仅在NSObject的子类中起作用，并且任何可观察的属性都必须使用@objc dynamic声明。
+
+```
+import Foundation
+
+class Child: NSObject {
+    let name: String
+    // KVO-enabled properties must be @objc dynamic
+    @objc dynamic var age: Int
+
+    init(name: String, age: Int) {
+        self.name = name
+        self.age = age
+        super.init()
+    }
+
+    func celebrateBirthday() {
+        age += 1
+    }
+}
+
+// Set up KVO
+let mia = Child(name: "Mia", age: 5)
+let observation = mia.observe(\.age, options: [.initial, .old]) { (child, change) in
+    if let oldValue = change.oldValue {
+        print("\(child.name)’s age changed from \(oldValue) to \(child.age)")
+    } else {
+        print("\(child.name)’s age is now \(child.age)")
+    }
+}
+
+// Trigger KVO (see output in the console)
+mia.celebrateBirthday()
+
+// Deiniting or invalidating the observation token ends the observation
+observation.invalidate()
+
+// This doesn't trigger the KVO handler anymore
+mia.celebrateBirthday()
+
+```
+
+#  归档和序列化
+
+```
+// Make a custom type archivable by conforming it (and all its members) to Codable
+struct Card: Codable, Equatable {
+    enum Suit: String, Codable {
+        case clubs, spades, hearts, diamonds
+    }
+
+    enum Rank: Int, Codable {
+        case two = 2, three, four, five, six, seven, eight, nine, ten, jack, queen, king, ace
+    }
+
+    var suit: Suit
+    var rank: Rank
+
+    static func ==(lhs: Card, rhs: Card) -> Bool {
+        return lhs.suit == rhs.suit && lhs.rank == rhs.rank
+    }
+}
+
+let hand = [Card(suit: .clubs, rank: .ace), Card(suit: .hearts, rank: .queen)]
+```
+
+## Encoding
+
+Swift还将随附一组内置的编码器和解码器，用于JSON（JSONEncoder和JSONDecoder）和属性列表（PropertyListEncoder和PropertyListDecoder）。这些在SE-0167中定义。 NSKeyedArchiver也将支持所有Codable类型。
+
+```
+var encoder = JSONEncoder()
+
+// Optional properties offered by JSONEncoder for customizing output
+encoder.outputFormatting = [.prettyPrinted] // another option: .sortedKeys
+encoder.dataEncodingStrategy
+encoder.dateEncodingStrategy
+encoder.nonConformingFloatEncodingStrategy
+
+// Every encoder and decoder has a userInfo property to pass custom configuration down the chain. The supported keys depend on the specific encode/decoder.
+encoder.userInfo
+
+let jsonData = try encoder.encode(hand)
+String(data: jsonData, encoding: .utf8) //json string
+try JSONSerialization.jsonObject(with: jsonData, options: .allowFragments) //字典
+```
+
+## Decoding
+
+```
+let decoder = JSONDecoder()
+let decodedHand = try decoder.decode([Card].self, from: jsonData)
+type(of: decodedHand)
+assert(decodedHand == hand)
+```
+
+# Sequence.Element
+
+序列现在具有其自己的元素关联类型。新的泛型功能使之成为可能，因为关联类型Element现在可以在类型系统中表示，其中Element == Iterator.Element。
